--- a/index.html
+++ b/index.html
@@ -101,75 +101,70 @@
         <div class="container-fluid">
             <div class="row no-side-pad no-pad">
                 <div class="col-md-3 col-sm-6">
-                    <div class="card">
+                    <div class="card light">
                         <img src="images/card-bg-1.jpg" class="card-img" alt="">
-                        <div class="card-img-overlay-center bg-50">
-                            <p class="h3">Болезни</p>
-                            <p class="h4">Наследственные, душевные, приобретённые</p>
-                            <p class="h3">Более 1000 уже здоровые!</p>
-                            <p class="h4">Облегчи свою жизнь уже сегодня!</p>
-                            <p class="h3">Как стать здоровым?</p>
+                        <div class="card-img-overlay-center text-right bg-50-l mx-20">
+                            <p class="h3 u-b">&bull; Болезни</p>
+                            <p class="h3 u-b">&bull; Наследственные, душевные, приобретённые</p>
+                            <p class="h3 u-b">&bull; Более 1000 уже исцелены</p>
                         </div>
                         <div class="card-img-overlay">
-                            <h3><u>ПОЛУЧИ СВОЁ ИСЦЕЛЕНИЕ!</u></h3>
+                            <h2 class="h2 u-b">ПОЛУЧИ СВОЁ ИСЦЕЛЕНИЕ</h2>
                         </div>
 
                         <div class="card-img-overlay-bottom">
-                            <a class="btn btn-default btn-sm" href="#"><span class="h4">Узнать больше</span></a>
+                            <p class="h3 u-b">Облегчи свою жизнь!</p>
+                            <a class="btn btn-default btn-sm" href="#"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <div class="card">
+                    <div class="card light">
                         <img src="images/card-bg-2.jpg" class="card-img" alt="">
-                        <div class="card-img-overlay-center bg-50">
-                            <p class="h3">Бесплатно</p>
-                            <p class="h4">Продуктовые пакеты и одежда</p>
-                            <p class="h3">3000 людей уже получили помощь!</p>
-                            <p class="h4">Один шаг и Ваша семья накормлена и одета!</p>
-                            <p class="h3">&nbsp;</p>
+                        <div class="card-img-overlay-center text-right bg-50-l px-20">
+                            <p class="h3 u-b">&bull; Продуктовые пакеты и одежда</p>
+                            <p class="h3 u-b">&bull; 3000 людей уже получили поддержку</p>
                         </div>
                         <div class="card-img-overlay">
-                            <h3><u>СОЦИАЛЬНАЯ ПОМОЩЬ</u></h3>
+                            <h2 class="h2 u-b">СОЦИАЛЬНАЯ ПОМОЩЬ</h2>
                         </div>
                         <div class="card-img-overlay-bottom">
-                            <a class="btn btn-default btn-sm" href="#"><span class="h4">Узнать как</span></a>
+                            <p class="h3 u-b">Один шаг и Ваша семья накормлена и одета!</p>
+                            <a class="btn btn-default btn-sm" href="#"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <div class="card">
-                        <img src="images/card-bg-3.jpg" class="card-img" alt="">
-                        <div class="card-img-overlay-center bg-50">
-                            <p class="h3">Опытный специалист с практикой 14 лет</p>
-                            <p class="h4">Бесплатная консультация</p>
-                            <p class="h3">Десятки семей решили свои проблемы!</p>
-                            <p class="h4">Практично, комфортно и результативно</p>
-                            <p class="h3">&nbsp;</p>
+                    <div class="card light">
+                        <img src="images/card-bg-3.jpg" class="card-img bg-30-l" alt="">
+                        <div class="card-img-overlay-center text-right bg-50-l px-20">
+                            <p class="h3 u-b">&bull; Опытный специалист с практикой 14 лет</p>
+                            <p class="h3 u-b">&bull; Бесплатная консультация</p>
+                            <p class="h3 u-b">&bull; Практично, комфортно и результативно</p>
                         </div>
                         <div class="card-img-overlay">
-                            <h3><u>СЕМЕЙНЫЙ ПСИХОЛОГ</u></h3>
+                            <h2 class="h2 u-b">СЕМЕЙНЫЙ ПСИХОЛОГ</h2>
                         </div>
                         <div class="card-img-overlay-bottom">
-                            <a class="btn btn-default btn-sm" href="#"><span class="h4">Узнать больше</span></a>
+                            <p class="h3 u-b">Десятки семей решили свои проблемы!</p>
+                            <a class="btn btn-default btn-sm" href="#"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <div class="card">
+                    <div class="card light">
                         <img src="images/card-bg-4.jpg" class="card-img" alt="">
-                        <div class="card-img-overlay-center bg-50">
-                            <p class="h3">Решение долговых обязательств</p>
-                            <p class="h4">Профессиональная консультация</p>
-                            <p class="h3">Увеличение бюджета реально</p>
-                            <p class="h4">Завершение вашего кризиса!</p>
-                            <p class="h3">&nbsp;</p>
+                        <div class="card-img-overlay-center text-right bg-50-l px-20">
+                            <p class="h3 u-b">&bull; Решение долговых обязательств</p>
+                            <p class="h3 u-b">&bull; Профессиональная консультация</p>
+                            <p class="h3 u-b">&bull; Увеличение бюджета</p>
                         </div>
                         <div class="card-img-overlay">
-                            <h3><u>ФИНАНСОВАЯ ПОМОЩЬ</u></h3>
+                            <h2 class="h2 u-b">ФИНАНСОВАЯ ПОМОЩЬ</h2>
                         </div>
                         <div class="card-img-overlay-bottom">
-                            <a class="btn btn-default btn-sm" href="#"><span class="h4">Узнать больше</span></a>
+                            <p class="h3 u-b">Завершение вашего кризиса!</p>
+                            <a class="btn btn-default btn-sm" href="#"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
@@ -177,45 +172,53 @@
         </div>
         <div class="bg"></div>
     </section>
-    <section id="gallery-carousel-2" class="pt-100 pb-125 dark text-center">
-        <div class="container">
-            <h2 class="mb-25">Отзывы</h2>
-            <!--            <h3 class="mb-50">Behind the scene</h3>-->
-            <div class="carousel-2item-dots gallery owl-drag">
-                <div class="item">
-                    <iframe width="535" height="300" src="https://www.youtube.com/embed/V3x1CPGMSbA" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <span class="">Олег Милешин</span>
+    <section id="gallery-fluid-list-3col" class="text-center dark">
+        <div class="container-fluid no-side-pad">
+            <h2 class="mb-25 mt-50">Отзывы</h2>
+            <div class="gallery row no-pad">
+                <div class="col-md-4">
+                    <div class="item video-iframe embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="640" height="360"
+                                src="https://www.youtube.com/embed/V3x1CPGMSbA" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                    </div>
+                    <div class="item video-iframe embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="640" height="360"
+                                src="https://www.youtube.com/embed/IocFgqL8dAo" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                    </div>
                 </div>
-                <div class="item">
-                    <iframe width="535" height="300" src="https://www.youtube.com/embed/LuQEjIP1QQE" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    <span class="">Дмитрий Селиванов</span>
+                <div class="col-md-4">
+                    <div class="item video-iframe embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="640" height="360"
+                                src="https://www.youtube.com/embed/LuQEjIP1QQE" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                    </div>
+                    <div class="item video-iframe embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="640" height="360"
+                                src="https://www.youtube.com/embed/uBIV_8nt3lg" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                    </div>
                 </div>
-                <a href="https://youtu.be/V3x1CPGMSbA" class="item gallery-box mfp-iframe">
-                    <i class="icon icon-size-m icon-ion-ios-play-outline"></i>
-                    <span class="caption">Video item</span>
-                    <img src="images/screen-2.jpg" alt="screen">
-                </a>
-                <a href="https://www.google.com.ua" target="_blank" class="item gallery-box external">
-                    <i class="icon icon-size-m icon-link"></i>
-                    <span class="caption">Item with external link</span>
-                    <img src="images/screen-3.jpg" alt="screen">
-                </a>
-                <a href="images/screen-4.jpg" class="item gallery-box">
-                    <i class="icon icon-size-m icon-plus"></i>
-                    <span class="caption">Gallery item with zoom option</span>
-                    <img src="images/screen-4.jpg" alt="screen">
-                </a>
-                <a href="images/screen-5.jpg" class="item gallery-box">
-                    <i class="icon icon-size-m icon-plus"></i>
-                    <span class="caption">Gallery item with zoom option</span>
-                    <img src="images/screen-5.jpg" alt="screen">
-                </a>
+                <div class="col-md-4">
+                    <div class="item video-iframe embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="640" height="360"
+                                src="https://www.youtube.com/embed/gKc-Wt9g8Cc" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                    </div>
+                    <div class="item video-iframe embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="640" height="360"
+                                src="https://www.youtube.com/embed/9dbVY2At3Ng" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
-
         </div>
         <div class="bg"></div>
     </section>
@@ -242,7 +245,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img1 img-circle" src="images/s-pastor.jpeg" srcset="images/team-1@2x.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -263,7 +266,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img1 img-circle" src="images/s-anast.jpeg" srcset="images/team-1@2x.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -284,7 +287,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img1 img-circle" src="images/s-elena.jpeg" srcset="images/team-1@2x.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -388,7 +391,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="img-circle" src="images/s-vlad.jpg" srcset="images/team-1@2x.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -532,12 +535,13 @@
             <div class="row">
                 <div class="col-md-5 col-md-offset-7">
                     <h2 class="mb-50">Расположение</h2>
-                    <p class="mb-50">Служения проводятся каждое воскресение в 11:00. Проезд до остановки Чкалова (Мед.институт).</p>
+                    <p class="mb-50">Служения проводятся каждое воскресение в 11:00. Проезд до остановки Чкалова
+                        (Мед.институт).</p>
                     <ul class="text-icon-list">
                         <li><i class="icon-map2"></i><span>пр.Комсомольский, д.80, 2 этаж</span></li>
                         <li><i class="icon-phone-incoming"></i><span>8-960-959-43-32 Елена</span></li>
-<!--                        <li><i class="icon-clock"></i><span>Our Work Hours</span></li>-->
-<!--                        <li><i class="icon-at-sign"></i><span>Our Email</span></li>-->
+                        <!--                        <li><i class="icon-clock"></i><span>Our Work Hours</span></li>-->
+                        <!--                        <li><i class="icon-at-sign"></i><span>Our Email</span></li>-->
                     </ul>
                 </div>
             </div>
