--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img1 img-circle" src="images/s-pastor.jpeg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img1 img-circle" src="images/s-pastor.jpeg" srcset="images/s-pastor.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -266,7 +266,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img1 img-circle" src="images/s-anast.jpeg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img1 img-circle" src="images/s-anast.jpeg" srcset="images/s-anast.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -287,7 +287,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img1 img-circle" src="images/s-elena.jpeg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img1 img-circle" src="images/s-elena.jpeg" srcset="images/s-elena.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -391,7 +391,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="img-circle" src="images/s-vlad.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="img-circle" src="images/s-vlad.jpg" srcset="images/s-vlad.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
