hero left, images

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 <div id="wrap">
     <section id="header-center-carousel-single" class="pt-150 pb-150 dark text-center">
         <div class="carousel-single-nav owl-drag">
-            <div class="item container bg-30">
+            <div class="item container bg-30 text-left">
                 <img src="images/logo1x.png" srcset="images/logo2x.png 2x" alt="" class="screen mb-50 mt-50">
                 <h1 class="mb-50"><strong>Добро пожаловать</strong><br>в Евангельскую Церковь<br>города Барнаула</h1>
-                <p class="mb-50 compressed-box-50">Мы очень рады, что вы зашли к нам на сайт.
+                <p class="mb-50">Мы очень рады, что вы зашли к нам на сайт.
                     Нам бы хотелось, чтобы вы присоединились к нашей церкви, как в реальности, так и онлайн.
                 </p>
             </div>
