--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-irina.jpeg" srcset="images/s-irina.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -349,7 +349,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-oksana.jpeg" srcset="images/s-oksana.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -370,7 +370,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-andr.jpeg" srcset="images/s-andr.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -391,7 +391,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="img-circle" src="images/s-vlad.jpg" srcset="images/s-vlad.jpg 2x"
+                                <img class="img-circle" src="images/s-vlad2.jpg" srcset="images/s-vlad2.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -411,7 +411,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-yuriy.jpeg" srcset="images/s-yuriy.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -431,7 +431,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-dmitriy.jpeg" srcset="images/s-dmitriy.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -451,7 +451,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-evg_sp.jpeg" srcset="images/s-evg_sp.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -471,7 +471,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-evg_sel.jpg" srcset="images/s-evg_sel.jpg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -492,7 +492,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-aleks.jpeg" srcset="images/s-aleks.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
@@ -513,7 +513,7 @@
                                         <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
                                     </ul>
                                 </div>
-                                <img class="card-img" src="images/team-1.jpg" srcset="images/team-1@2x.jpg 2x"
+                                <img class="card-img" src="images/s-maks.jpeg" srcset="images/s-maks.jpeg 2x"
                                      alt="team">
                             </div>
                             <div class="card-block">
