--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Церковь г.Барнаула</title>
+    <title>Главная - Церковь г.Барнаула</title>
 
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
@@ -114,7 +114,7 @@
 
                         <div class="card-img-overlay-bottom">
                             <p class="h3 u-b">Облегчи свою жизнь!</p>
-                            <a class="btn btn-default btn-sm" href="#"><span class="h4 u-b">Узнать больше</span></a>
+                            <a class="btn btn-default btn-sm" href="heals.html"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
