--- a/healing.html
+++ b/healing.html
@@ -53,16 +53,16 @@
     <section id="step-rtl-text-btn-img-half-start" class="pt-75 pb-150 light">
         <div class="container">
             <div class="row flex-md-vmiddle">
-                <div class="col-md-7 col-md-push-5 text-center">
-                    <img src="images/illustration-2.png" srcset="images/illustration-2@2x.png 2x" alt="illustration"
+                <div class="col-md-6 col-md-push-6 text-center">
+                    <img src="images/heal-1.png" srcset="images/heal-1-2x.png 2x" alt="illustration"
                          class="screen">
                 </div>
-                <div class="col-md-5 col-md-pull-7" style="z-index: 10;">
+                <div class="col-md-6 col-md-pull-6" style="z-index: 10;">
                     <h2 class="mb-30" style="overflow: visible;">Вам знакомы эти проблемы?<br></h2>
-                    <ul style="overflow: visible;list-style: disc">
+                    <ul class="tabs-ul">
                         <li>Все болели в моей семье и я тоже</li>
                         <li>Не могут определить диагноз</li>
-                        <li>Страх что моя Жизнь будет не долгой</li>
+                        <li>Страх что моя Жизнь будет недолгой</li>
                         <li>Понимаю что причина моей болезни что то духовное</li>
                         <li>Повторяющиеся болезни</li>
                         <li>Ощущение проклятья на моем роду</li>
@@ -79,13 +79,13 @@
     <section id="step-ltr-img-text-btn-half--0" class="pt-75 pb-150 light">
         <div class="container">
             <div class="row flex-md-vmiddle">
-                <div class="col-md-7 text-center">
-                    <img src="images/illustration-1.png" srcset="images/illustration-1@2x.png 2x" alt="illustration"
+                <div class="col-md-6 text-center">
+                    <img src="images/heal-2.png" srcset="images/heal-2-2x.png 2x" alt="illustration"
                          class="screen">
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <h2 class="mb-30">Программа исцеления</h2>
-                    <ul style="list-style: disc">
+                    <ul class="tabs-ul">
                         <li>Консультация специалиста в выявлении духовной причины</li>
                         <li>Духовная диагностика</li>
                         <li>Выявление какого ресурса не достаточно чтобы выздороветь</li>
@@ -102,18 +102,18 @@
     <section id="step-rtl-text-btn-img-half" class="pt-75 pb-150 light">
         <div class="container">
             <div class="row flex-md-vmiddle">
-                <div class="col-md-7 col-md-push-5 text-center">
-                    <img src="images/illustration-2.png" srcset="images/illustration-2@2x.png 2x" alt="illustration"
+                <div class="col-md-6 col-md-push-6 text-center">
+                    <img src="images/heal-3.png" srcset="images/heal-3-2x.png 2x" alt="illustration"
                          class="screen">
                 </div>
-                <div class="col-md-5 col-md-pull-7">
+                <div class="col-md-6 col-md-pull-6">
                     <h2 class="mb-30">Какие форматы?</h2>
-                    <ul class="mb-30" style="list-style: disc">
-                        <li>личная беседа и консультирование</li>
-                        <li>онлайн встреча</li>
-                        <li>общее Служение с тематикой исцеления</li>
+                    <ul class="mb-30 tabs-ul">
+                        <li>Личная беседа и консультирование</li>
+                        <li>Онлайн встреча</li>
+                        <li>Общее Служение с тематикой исцеления</li>
                     </ul>
-                    <p style="margin-left: -30px">Мы не отрицаем современную медицину, и все традиционные лечения в
+                    <p>Мы не отрицаем современную медицину, и все традиционные лечения в
                         государственных учреждениях. Польза врачей имеет огромное значение для человечества.
                         <br>Но мы так же верим в профессионализм духовной практики которая основана на христианских
                         принципах согласно Священного писания. И благодаря благодати Божьей мы служим и молимся за
@@ -128,17 +128,17 @@
     <section id="step-ltr-img-text-btn-half" class="pt-75 pb-150 light">
         <div class="container">
             <div class="row flex-md-vmiddle">
-                <div class="col-md-7 text-center">
-                    <img src="images/illustration-1.png" srcset="images/illustration-1@2x.png 2x" alt="illustration"
+                <div class="col-md-6 text-center">
+                    <img src="images/heal-4.png" srcset="images/heal-4-2x.png 2x" alt="illustration"
                          class="screen">
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <h2 class="mb-30">Что для этого нужно от вас?</h2>
-                    <ul class="mb-30" style="list-style: disc">
-                        <li>ваше желание иметь положительный результат</li>
-                        <li>не важно к какой вы относитесь религии</li>
-                        <li>вы можете себя относить к атеистам и агностикам</li>
-                        <li>выделить для этого своё время</li>
+                    <ul class="tabs-ul">
+                        <li>Ваше желание иметь положительный результат</li>
+                        <li>Не важно к какой вы относитесь религии</li>
+                        <li>Вы можете себя относить к атеистам и агностикам</li>
+                        <li>Выделить для этого своё время</li>
                     </ul>
                 </div>
             </div>
@@ -150,26 +150,22 @@
     <section id="step-rtl-text-list-img-half" class="pt-75 pb-150 light">
         <div class="container">
             <div class="row flex-md-vmiddle">
-                <div class="col-md-7 col-md-push-5 text-center">
-                    <img src="images/illustration-4.png" srcset="images/illustration-4@2x.png 2x" alt="illustration"
+                <div class="col-md-6 col-md-push-6 text-center">
+                    <img src="images/heal-5-2x.png" srcset="images/heal-5-4x.png 2x" alt="illustration"
                          class="screen">
                 </div>
-                <div class="col-md-5 col-md-pull-7">
+                <div class="col-md-6 col-md-pull-6">
                     <h2 class="mb-30">Кто проводит?</h2>
                     <div class="text-center">
-                        <img height="150px" class="card-img_ img-circle" src="images/s-pastor.jpeg"
-                             srcset="images/s-pastor.jpeg 2x"
-                             alt="team">
-                        <p>Торопчин Артем</p>
+                        <img class="img-circle" src="images/pastor-1.jpg" srcset="images/pastor-1-2x.jpg 2x" alt="pastor">
+                        <h4>Торопчин Артем</h4>
                         <p class="mb-30">Cвященник имеющий 15 летний опыт служения людям с разными заболеваниями</p>
                     </div>
                     <div class="text-center">
-                        <img height="150px" class="card-img_ img-circle" src="images/s-pastor.jpeg"
-                             srcset="images/s-pastor.jpeg 2x"
-                             alt="team">
-                        <p>Милешин Олег</p>
+                        <img class="img-circle" src="images/oleg-2.jpg" srcset="images/oleg-2-2x.jpg 2x" alt="oleg">
+                        <h4>Милешин Олег</h4>
                         <p class="mb-50">Cвященник с даром исцелять больных по благодати Божьей</p>
-                        <p>Другие духовные эксперты</p>
+                        <h4>Другие духовные эксперты</h4>
                     </div>
 
 
@@ -194,7 +190,7 @@
                 </div>
                 <div class="col-md-6 col-md-pull-5">
                     <div class="padding-box light" style="background-color:#fff">
-                        <h4 class="mb-25">Оставьте вашу заявку</h4>
+                        <h4 class="mb-25">Оставьте вашу заявку на консультацию</h4>
                         <form action="./scripts/request.php" class="contact_form" novalidate="novalidate"
                               id="step-ltr-form-img-text-half-end-form">
                             <div class="form-group">
@@ -386,23 +382,23 @@
                             aria-hidden="true">×</span></button>
                 </div>
                 <div class="modal-body">
-                    <h2 class="mb-30">Молитва за ваше исцеление</h2>
-                    <p class="mb-30">Просто оставьте свои данные и наша молитвенная группа будет молиться за
-                        вас</p>
+                    <h2 class="mb-30">Молитва за своё исцеление</h2>
+                    <p class="mb-30 fs-125">Введите свои данные и мы вышлем вам молитву за исцеление, а так-же вы сможете оставить заявку в молитвенную группу</p>
                     <form action="./scripts/request.php" class="contact_form mb-0" id="popup-center-form-form"
                           novalidate="novalidate">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Full name" name="NAME">
+                            <input type="text" class="form-control" placeholder="Ваше имя" name="NAME">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email Address" name="EMAIL">
+                            <input type="email" class="form-control" placeholder="Ваш емайл" name="EMAIL">
                         </div>
                         <div class="form-group">
                             <input type="tel" class="form-control" placeholder="Ваш телефон" name="TEL">
                         </div>
                         <button type="submit" data-loading-text="•••" data-complete-text="Completed!"
-                                data-reset-text="Try again later..." class="btn btn-primary btn-block"><i
-                                class="icon-paper-plane icon-position-left icon-size-m"></i><span>Оставить заявку</span>
+                                data-reset-text="Try again later..." class="btn btn-primary btn-block">
+                            <i class="icon-paper-plane icon-position-left icon-size-m"></i>
+                            <span>Вышлите молитву</span>
                         </button>
                     </form>
                 </div>
