--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"><span
                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-            <div class="navbar-brand"><a href="#"><img src="images/logo025x.png"
+            <div class="navbar-brand"><a href="/"><img src="images/logo025x.png"
                                                                  srcset="images/logo05x.png 2x"
                                                                  alt="NGBarnaul logo" class=""></a></div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-center">
-                <li><a href="about.html"><span>О нас</span></a></li>
-                <li><a href="#reviews"><span>Отзывы</span></a></li>
-                <li><a href="#command"><span>Команда</span></a></li>
-                <li><a href="#contacts"><span>Контакты</span></a></li>
+                <li><a href="/about"><span>О нас</span></a></li>
+                <li><a href="/#tabs"><span>Разделы</span></a></li>
+                <li><a href="/#reviews"><span>Отзывы</span></a></li>
+                <li><a href="/#command"><span>Команда</span></a></li>
+                <li><a href="/#contacts"><span>Контакты</span></a></li>
             </ul>
             <!--            <a href="#" class="btn-default btn btn-sm navbar-btn navbar-right"><span>Зарегистрироваться</span></a>-->
         </div>
@@ -57,7 +58,7 @@
                 </p>
             </div>
         </div>
-        <div class="bg" style="background-image: url('images/banner-1.jpg');"></div>
+        <div class="bg" style="background-image: url('images/banner.png');"></div>
     </section>
     <section id="counter-halfbg-timer" class="pt-md-125 pb-125 text-center light d-none">
         <div class="half-container-left"></div>
@@ -96,7 +97,7 @@
         </div>
         <div class="bg"></div>
     </section>
-    <section id="desc-fluid-card-4col" class="text-center dark">
+    <section id="tabs" class="text-center dark">
         <div class="container-fluid">
             <div class="row no-side-pad no-pad">
                 <div class="col-md-3 col-sm-6">
@@ -115,7 +116,7 @@
 
                         <div class="card-img-overlay-bottom">
                             <p class="u-b">Облегчи свою жизнь!</p>
-                            <a class="btn btn-primary btn-xs" href="healing.html"><span
+                            <a class="btn btn-primary btn-xs" href="/healing"><span
                                     class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
@@ -588,16 +589,16 @@
                             <h4><strong>Главная</strong></h4>
                             <ul class="text-list">
                                 <li>
-                                    <a href="#">Разделы</a>
+                                    <a href="/#tabs">Разделы</a>
                                 </li>
                                 <li>
-                                    <a href="#">Отзывы</a>
+                                    <a href="/#reviews">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a href="#">Команда</a>
+                                    <a href="/#command">Команда</a>
                                 </li>
                                 <li>
-                                    <a href="#">Контакты</a>
+                                    <a href="/#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </div>
@@ -605,7 +606,7 @@
                             <h4><strong>Разделы</strong></h4>
                             <ul class="text-list">
                                 <li>
-                                    <a href="#">Исцеление</a>
+                                    <a href="/healing">Исцеление</a>
                                 </li>
                                 <li>
                                     <a href="#">Социальная помощь</a>
@@ -622,7 +623,7 @@
                             <h4><strong>Дополнительно</strong></h4>
                             <ul class="text-list">
                                 <li>
-                                    <a href="#">О нас</a>
+                                    <a href="/about">О нас</a>
                                 </li>
                             </ul>
                         </div>
@@ -657,19 +658,19 @@
                 <div class="col-md-6 text-md-right">
                     <ul class="social-list">
                         <li>
-                            <a href="#"><i class="icon-instagram icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i class="icon-instagram icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-youtube icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i class="icon-youtube icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-vk icon-size-m"></i></a>
+                            <a target="_blank" href="https://vk.com/ngbarnaul"><i class="icon-vk icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-odnoklassniki icon-size-m"></i></a>
+                            <a target="_blank" href="https://ok.ru/ngbrn"><i class="icon-odnoklassniki icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-facebook icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i class="icon-facebook icon-size-m"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -679,9 +680,9 @@
     </footer>
 </div>
 <footer></footer>
-<div class="modal-container"></div>
+<div class="modal-container">
 
-
+</div>
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/owl.carousel.js"></script>
