--- a/healing.html
+++ b/healing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Получи своё исцеление - Церковь г.Барнаула</title>
+    <title>Исцеление - Церковь г.Барнаула</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/owl.carousel.css"/>
     <link rel="stylesheet" href="css/magnific-popup.css"/>
     <link rel="stylesheet" href="css/custom.css"/>
-    <link rel="stylesheet" href="css/heals.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/preloader.css"/>
 </head>
 <body class="light-page">
@@ -30,16 +30,19 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"><span
                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-            <div class="navbar-brand"><img src="images/logo2-light.png" srcset="images/logo2-light@2x.png 2x"
-                                           alt="Your logo" class=""></div>
+            <div class="navbar-brand"><a href="/"><img src="images/logo025x.png"
+                                                                 srcset="images/logo05x.png 2x"
+                                                                 alt="NGBarnaul logo" class=""></a></div>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-center">
-                <li><a href="#"><span>About</span></a></li>
-                <li><a href="#"><span>Screenshots</span></a></li>
-                <li><a href="#"><span>Stories</span></a></li>
+                <li><a href="/about"><span>О нас</span></a></li>
+                <li><a href="/#tabs"><span>Разделы</span></a></li>
+                <li><a href="/#reviews"><span>Отзывы</span></a></li>
+                <li><a href="/#command"><span>Команда</span></a></li>
+                <li><a href="/#contacts"><span>Контакты</span></a></li>
             </ul>
-            <a href="#" class="btn-default btn btn-sm navbar-btn navbar-right"><span>Download</span></a>
+            <!--            <a href="#" class="btn-default btn btn-sm navbar-btn navbar-right"><span>Зарегистрироваться</span></a>-->
         </div>
     </div>
     <div class="nav-bg dark"></div>
@@ -221,108 +224,67 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="row">
-                        <div class="col-sm-3">
-                            <h4><strong>Learn more</strong></h4>
+                        <div class="col-sm-4">
+                            <h4><strong>Главная</strong></h4>
                             <ul class="text-list">
                                 <li>
-                                    <a href="#">Tour</a>
+                                    <a href="/#tabs">Разделы</a>
                                 </li>
                                 <li>
-                                    <a href="#">Customers</a>
+                                    <a href="/#reviews">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a href="#">Pricing and Plans</a>
+                                    <a href="/#command">Команда</a>
                                 </li>
                                 <li>
-                                    <a href="#">New Features</a>
+                                    <a href="/#contacts">Контакты</a>
                                 </li>
-                                <li>
-                                    <a href="#">Education</a>
-                                </li>
-
                             </ul>
                         </div>
-                        <div class="col-sm-3">
-                            <h4><strong>Extras</strong></h4>
+                        <div class="col-sm-4">
+                            <h4><strong>Разделы</strong></h4>
                             <ul class="text-list">
                                 <li>
-                                    <a href="#">Marketplace</a>
+                                    <a href="/healing">Исцеление</a>
                                 </li>
                                 <li>
-                                    <a href="#">Design</a>
+                                    <a href="#">Социальная помощь</a>
                                 </li>
                                 <li>
-                                    <a href="#">Team Sync</a>
+                                    <a href="#">Семейный психолог</a>
                                 </li>
                                 <li>
-                                    <a href="#">Disruptors</a>
+                                    <a href="#">Финансовая помощь</a>
                                 </li>
-                                <li>
-                                    <a href="#">Free T-Shirt</a>
-                                </li>
-
                             </ul>
                         </div>
-                        <div class="col-sm-3">
-                            <h4><strong>Extras</strong></h4>
+                        <div class="col-sm-4">
+                            <h4><strong>Дополнительно</strong></h4>
                             <ul class="text-list">
                                 <li>
-                                    <a href="#">Marketplace</a>
+                                    <a href="/about">О нас</a>
                                 </li>
-                                <li>
-                                    <a href="#">Design</a>
-                                </li>
-                                <li>
-                                    <a href="#">Team Sync</a>
-                                </li>
-                                <li>
-                                    <a href="#">Disruptors</a>
-                                </li>
-                                <li>
-                                    <a href="#">Free T-Shirt</a>
-                                </li>
-
-                            </ul>
-                        </div>
-                        <div class="col-sm-3">
-                            <h4><strong>Extras</strong></h4>
-                            <ul class="text-list">
-                                <li>
-                                    <a href="#">Marketplace</a>
-                                </li>
-                                <li>
-                                    <a href="#">Design</a>
-                                </li>
-                                <li>
-                                    <a href="#">Team Sync</a>
-                                </li>
-                                <li>
-                                    <a href="#">Disruptors</a>
-                                </li>
-                                <li>
-                                    <a href="#">Free T-Shirt</a>
-                                </li>
-
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-md-offset-1">
-                    <h3 class="mb-25">Drop us a line </h3>
+                    <h3 class="mb-25">Обратная связь</h3>
                     <form action="./scripts/request.php" class="contact_form" novalidate="novalidate"
                           id="footer-list-form-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Full name" name="NAME">
+                            <input type="text" class="form-control" placeholder="Ваше имя" name="NAME">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email Address" name="EMAIL">
+                            <input type="email" class="form-control" placeholder="Ваш емайл" name="EMAIL">
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" rows="4" placeholder="Your message or question"
+                            <textarea class="form-control" rows="4" placeholder="Ваше сообщение или вопрос"
                                       name="MESSAGE"></textarea>
                         </div>
                         <button type="submit" data-loading-text="•••" data-complete-text="Completed!"
-                                data-reset-text="Try again later..." class="btn btn-block btn-primary"><span>Ask</span>
+                                data-reset-text="Try again later..." class="btn btn-block btn-primary">
+                            <span>Спросить</span>
                         </button>
                     </form>
                 </div>
@@ -330,39 +292,24 @@
             <hr class="mt-50 mb-50">
             <div class="row">
                 <div class="col-md-6">
-                    <p>© Multifour.com.<br>All rights reserved.</p>
+                    <p>© info@electis.ru<br>All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-md-right">
                     <ul class="social-list">
                         <li>
-                            <a href="#"><i class="icon-twitter icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/church_ng/"><i class="icon-instagram icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-facebook icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCAdwiYei9LfBtbQH3quITmA"><i class="icon-youtube icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-linkedin icon-size-m"></i></a>
+                            <a target="_blank" href="https://vk.com/ngbarnaul"><i class="icon-vk icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-github-alt icon-size-m"></i></a>
+                            <a target="_blank" href="https://ok.ru/ngbrn"><i class="icon-odnoklassniki icon-size-m"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="icon-pinterest-p icon-size-m"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon-google-plus icon-size-m"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon-dribbble icon-size-m"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon-behance icon-size-m"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon-instagram icon-size-m"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="icon-youtube icon-size-m"></i></a>
+                            <a target="_blank" href="https://www.facebook.com/ngbarnaul"><i class="icon-facebook icon-size-m"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -412,7 +359,7 @@
 <script src="js/owl.carousel.js"></script>
 <script src="js/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
-<script src="js/jquery.countdown.js"></script>
+<!--<script src="js/jquery.countdown.js"></script>-->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCByts0vn5uAYat3aXEeK0yWL7txqfSMX8"></script>
 <script src="https://cdn.jsdelivr.net/jquery.goodshare.js/3.2.8/goodshare.min.js"></script>
 <script src="js/custom.js"></script>
@@ -420,7 +367,6 @@
 <script>
     $(window).load(function () {
         setTimeout(function () {
-            //открыть модальное окно с id="myModal"
             $("#popup-center-form").modal('show');
         }, 30000);
     });
