--- a/index.html
+++ b/index.html
@@ -472,48 +472,48 @@
                                 <a href="tel:+79133688393">8 (913) 368-83-93 Евгения</a>
                             </div>
                         </div>
-                        <div class="card item gallery-style-4">
-                            <div class="card-block-hover">
-                                <div class="card-img-overlay-center card-img-overlay-bg">
-                                    <ul class="social-list">
-                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>
-                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>
-                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>
-                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
-                                    </ul>
-                                </div>
-                                <img class="img-circle" src="images/s-evg_sel.jpg" srcset="images/s-evg_sel.jpg 2x"
-                                     alt="team">
-                            </div>
-                            <div class="card-block">
-                                <h3 class="mt-20 mb-0"><strong>Евгения Селиванова</strong></h3>
-                                <h4>Организатор досуга церкви</h4>
-                                <p>Ее способности позволяют организовывать невероятные мероприятия которые заряжают
-                                    людей на большие победы и подъем позитивных эмоций.</p>
-                                <a href="tel:+79132550523">8 (913) 255-05-23 Евгения</a>
-                            </div>
-                        </div>
-                        <div class="card item gallery-style-4">
-                            <div class="card-block-hover">
-                                <div class="card-img-overlay-center card-img-overlay-bg">
-                                    <ul class="social-list">
-                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>
-                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>
-                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>
-                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>
-                                    </ul>
-                                </div>
-                                <img class="img-circle" src="images/s-aleks.jpeg" srcset="images/s-aleks.jpeg 2x"
-                                     alt="team">
-                            </div>
-                            <div class="card-block">
-                                <h3 class="mt-20 mb-0"><strong>Алексей Спирков</strong></h3>
-                                <h4>Руководитель социального проекта «День милосердия»</h4>
-                                <p>Не оставит не одного человека без продуктов и одежды. Доброй души чуткого внимания к
-                                    людям служитель.</p>
-                                <a href="tel:+79835560830">8 (983) 556-08-30 Алексей</a>
-                            </div>
-                        </div>
+<!--                        <div class="card item gallery-style-4">-->
+<!--                            <div class="card-block-hover">-->
+<!--                                <div class="card-img-overlay-center card-img-overlay-bg">-->
+<!--                                    <ul class="social-list">-->
+<!--                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>-->
+<!--                                    </ul>-->
+<!--                                </div>-->
+<!--                                <img class="img-circle" src="images/s-evg_sel.jpg" srcset="images/s-evg_sel.jpg 2x"-->
+<!--                                     alt="team">-->
+<!--                            </div>-->
+<!--                            <div class="card-block">-->
+<!--                                <h3 class="mt-20 mb-0"><strong>Евгения Селиванова</strong></h3>-->
+<!--                                <h4>Организатор досуга церкви</h4>-->
+<!--                                <p>Ее способности позволяют организовывать невероятные мероприятия которые заряжают-->
+<!--                                    людей на большие победы и подъем позитивных эмоций.</p>-->
+<!--                                <a href="tel:+79132550523">8 (913) 255-05-23 Евгения</a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="card item gallery-style-4">-->
+<!--                            <div class="card-block-hover">-->
+<!--                                <div class="card-img-overlay-center card-img-overlay-bg">-->
+<!--                                    <ul class="social-list">-->
+<!--                                        <li><a href="#"><i class="icon-twitter icon-size-m"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-facebook icon-size-m"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-linkedin icon-size-m"></i></a></li>-->
+<!--                                        <li><a href="#"><i class="icon-google-plus icon-size-m"></i></a></li>-->
+<!--                                    </ul>-->
+<!--                                </div>-->
+<!--                                <img class="img-circle" src="images/s-aleks.jpeg" srcset="images/s-aleks.jpeg 2x"-->
+<!--                                     alt="team">-->
+<!--                            </div>-->
+<!--                            <div class="card-block">-->
+<!--                                <h3 class="mt-20 mb-0"><strong>Алексей Спирков</strong></h3>-->
+<!--                                <h4>Руководитель социального проекта «День милосердия»</h4>-->
+<!--                                <p>Не оставит не одного человека без продуктов и одежды. Доброй души чуткого внимания к-->
+<!--                                    людям служитель.</p>-->
+<!--                                <a href="tel:+79835560830">8 (983) 556-08-30 Алексей</a>-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="card item gallery-style-4">
                             <div class="card-block-hover">
                                 <div class="card-img-overlay-center card-img-overlay-bg">
