--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <div class="card-img-overlay-bottom">
                             <p class="u-b">Один шаг и Ваша семья накормлена и одета!</p>
-                            <a class="btn btn-primary btn-xs" href="#"><span class="h4 u-b">Узнать больше</span></a>
+                            <a class="btn btn-primary btn-xs" href="/social"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="card-img-overlay-bottom">
                             <p class="u-b">Десятки семей решили свои проблемы!</p>
-                            <a class="btn btn-primary btn-xs" href="#"><span class="h4 u-b">Узнать больше</span></a>
+                            <a class="btn btn-primary btn-xs" href="/psycholog"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                         </div>
                         <div class="card-img-overlay-bottom">
                             <p class="u-b">Завершение вашего кризиса!</p>
-                            <a class="btn btn-primary btn-xs" href="#"><span class="h4 u-b">Узнать больше</span></a>
+                            <a class="btn btn-primary btn-xs" href="/finance"><span class="h4 u-b">Узнать больше</span></a>
                         </div>
                     </div>
                 </div>
