--- a/social.html
+++ b/social.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row flex-md-vmiddle">
                 <div class="col-md-6 col-md-push-6 text-center">
-                    <img src="images/heal-1.png" srcset="images/heal-1-2x.png 2x" alt="illustration"
+                    <img src="images/soc-1.jpg" srcset="images/soc-1-2x.jpg 2x" alt="illustration"
                          class="screen">
                 </div>
                 <div class="col-md-6 col-md-pull-6" style="z-index: 10;">
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row flex-md-vmiddle">
                 <div class="col-md-6 text-center">
-                    <img src="images/heal-2.png" srcset="images/heal-2-2x.png 2x" alt="illustration"
+                    <img src="images/soc-2.jpg" srcset="images/soc-2-2x.jpg 2x" alt="illustration"
                          class="screen">
                 </div>
                 <div class="col-md-6">
@@ -132,7 +132,7 @@
                 </div>
             </div>
         </div>
-        <div class="step-line-ltc step-line-half step-line-end"></div>
+        <div class="step-line-rtc step-line-half step-line-end"></div>
         <div class="bg"></div>
     </section>
     <footer id="footer-list-form" class="dark pt-100 pb-100">
